--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ image_preprocess/api_key.py
 image_preprocess/images/
 image_preprocess/preproc_images/
 
+#.npy
+Deeplearning/*.npy
+
 #tagging
 image_preprocess/image_tagging.py
 
