--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 requests==2.25.1
 selenium==3.141.0
 Pillow==8.0.1
-matplotlib==3.2.0
+matplotlib==3.3.3
 tensorflow==2.3.0
-sklearn==0.0
+Keras==2.3.1
+scikit-learn==0.23.2
+numpy~=1.18.5
